--- a/theme.toml
+++ b/theme.toml
@@ -8,5 +8,5 @@ features = ['bootstrap 4', 'responsive design', 'blog', 'responsive', 'minimal',
 min_version = "0.41"
 
 [author]
-  name = "Static Mania"
-  homepage = "https://staticmania.com/"
+  name = "Umar Haroon"
+  homepage = "https://umarharoon.com/"
